# open-arbitrage

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  marketplace.py  player.py  pyproject.toml  random_events.py  random_games.py  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: examples.md
open_arbitrage/: __init__.py  api.py  cli.py  market.py
open_arbitrage/engine/: __init__.py  core.py
tests/: test_api.py  test_cli.py  test_engine.py  test_market.py
