[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "open-arbitrage"
version = "0.1.0"
description = "Open source trading/arbitrage game"
authors = [{ name = "OpenARB Contributors" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.21.0,<0.22",
  "rich>=14.2.0,<15",
  "matplotlib>=3.8,<4",
  "fastapi>=0.128.0,<0.129",
  "uvicorn[standard]>=0.40,<0.41",
  "python-multipart>=0.0.9,<0.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.8",
  "mypy>=1.11.1",
  "httpx>=0.27,<0.29",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "hypothesis>=6.112.1",
  "pre-commit>=3.8.0",
  "types-setuptools>=75.1.0.20241126",
]

[project.scripts]
open-arbitrage = "open_arbitrage.cli:main"
open-arb = "open_arbitrage.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "C4",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
packages = ["open_arbitrage"]
mypy_path = "."
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:fastapi.routing",
  "ignore:Please use `import python_multipart` instead:PendingDeprecationWarning:starlette.formparsers",
]

[tool.hatch.build.targets.wheel]
packages = ["open_arbitrage"]
