[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "open-arbitrage"
version = "0.2.0"
description = "Deterministic, seedable trading/arbitrage game engine with CLI and HTTP front-ends"
authors = [{ name = "OpenARB Contributors" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.26.7,<0.27",
  "rich>=15.0.0,<16",
  "fastapi>=0.137.1,<0.138",
  "uvicorn[standard]>=0.49,<0.50",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.17",
  "mypy>=2.1.0",
  "httpx>=0.28.1,<0.29",
  "pytest>=9.1.0",
  "pytest-cov>=7.1.0",
  "hypothesis>=6.155.3",
  "pre-commit>=4.6.0",
  "types-setuptools>=82.0.0.20260518",
]

[project.scripts]
open-arbitrage = "open_arbitrage.cli:main"
open-arb = "open_arbitrage.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "C4",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
packages = ["open_arbitrage"]
mypy_path = "."
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:fastapi.routing",
]

[tool.hatch.build.targets.wheel]
packages = ["open_arbitrage"]
